--- a/jamovi/catdes.r.yaml
+++ b/jamovi/catdes.r.yaml
@@ -1,115 +1,160 @@
 ---
-name:  catdes
-title: Results of the Categorical variable description
-jrs:   '1.1'
+name: catdes
+title: Results of the Variable Description
+jrs: '1.1'
 
 items:
-    - name: chigroup
-      title: Chi-squared test
-      type: Group
-      visible: false
-      items:
-        - name: chi
-          title: Link between the cluster variable and the categorical variables
-          type: Table
-          columns :
-            - name: varchi
-              title: ''
-              type: text
-            - name: chipv
-              title: p-value
-              type: number
-              format: zto,pvalue
-            - name: df
-              title: df
-              type: integer
+  - name: chigroup
+    title: Chi-Squared Test
+    type: Group
+    visible: false
+    items:
+      - name: chi
+        title: Link Between the Cluster Variable and the Categorical Variables
+        type: Table
+        columns:
+          - name: varchi
+            title: ''
+            type: text
+          - name: chipv
+            title: p-value
+            type: number
+            format: zto,pvalue
+          - name: df
+            title: df
+            type: integer
 
-    - name: categgroup
-      title: Description by the categorical variables
-      type: Group
-      visible: false
-      items:
-        - name: categ
-          title: Description of each cluster by the categories
-          type: Table
-          columns :
-            - name: varcateg
-              title: ''
-              type: text
-              combineBelow: true
-            - name: vardesccateg
-              title: Category
-              type: text
-            - name: clamod
-              title: Cla/Mod
-              type: number
-            - name: modcla
-              title: Mod/Cla
-              type: number
-            - name: global
-              title: Global
-              type: number
-            - name: categpv
-              title: p-value
-              type: number
-              format: zto,pvalue
-            - name: vtest
-              title: Vtest
-              type: number
+  - name: categgroup
+    title: Description by the Categorical Variables
+    type: Group
+    visible: false
+    items:
+      - name: categquali
+        title: Description of Each Cluster by the Categories
+        type: Table
+        columns:
+          - name: varcateg
+            title: ''
+            type: text
+            combineBelow: true
+          - name: vardesccateg
+            title: Category
+            type: text
+          - name: clamod
+            title: Cla/Mod
+            type: number
+          - name: modcla
+            title: Mod/Cla
+            type: number
+          - name: global
+            title: Global
+            type: number
+          - name: categpv
+            title: p-value
+            type: number
+            format: zto,pvalue
+          - name: vtest
+            title: Vtest
+            type: number
+      - name: categquanti
+        title: Description of the Quantitative Variable by the Categories
+        type: Table
+        columns:
+          - name: varcateg
+            title: ''
+            type: text
+            combineBelow: true
+          - name: vardesccateg
+            title: Category
+            type: text
+          - name: estimate
+            title: Estimate
+            type: number
+          - name: categpv
+            title: p-value
+            type: number
+            format: zto,pvalue
+      - name: qualir2
+        title: Link with the Qualitative Variables
+        type: Table
+        columns:
+          - name: varr2
+            title: ''
+            type: text
+          - name: r2
+            title: R2
+            type: number
+            format: zto
+          - name: r2pvalue
+            title: p.value
+            type: number
+            format: zto,pvalue
 
-    - name: qtvargroup
-      title: Global description by the quantitative variables
-      type: Group
-      visible: false
-      items:
-        - name: qtvar
-          title: Link between the cluster variable and the quantitative variables
-          type: Table
-          columns :
-            - name: varqtvar
-              title: ''
-              type: text
-            - name: scc
-              title: Square correlation coefficient
-              type: number
-            - name: qtvarpv
-              title: p-value
-              type: number
-              format: zto,pvalue
+  - name: qtvargroup
+    title: Global Description by the Quantitative Variables
+    type: Group
+    visible: false
+    items:
+      - name: qtvar
+        title: Link Between the Cluster Variable and the Quantitative Variables
+        type: Table
+        columns:
+          - name: varqtvar
+            title: ''
+            type: text
+          - name: scc
+            title: Square correlation coefficient
+            type: number
+          - name: qtvarpv
+            title: p-value
+            type: number
+            format: zto,pvalue
 
-    - name: qtgroup
-      title: Description by the quantitative variables
-      type: Group
-      visible: false
-      items:
-        - name: qt
-          title: Description of each cluster by the quantative variables
-          type: Table
-          columns :
-            - name: varqt
-              title: ''
-              type: text
-            - name: vardescqt
-              title: Variable
-              type: text
-            - name: vtestqt
-              title: Vtest
-              type: number
-            - name: meancateg
-              title: Mean in category
-              type: number
-            - name: overallmean
-              title: Overall mean
-              type: number
-            - name: sdcateg
-              title: sd in category
-              type: number
-            - name: overallsd
-              title: Overall sd
-              type: number
-            - name: qtpv
-              title: p-value
-              type: number
-              format: zto,pvalue
-
-...
+  - name: qtgroup
+    title: Description by the Quantitative Variables
+    type: Group
+    visible: false
+    items:
+      - name: qt
+        title: Description of Each Cluster by the Quantative Variables
+        type: Table
+        columns:
+          - name: varqt
+            title: ''
+            type: text
+          - name: vardescqt
+            title: Variable
+            type: text
+          - name: vtestqt
+            title: Vtest
+            type: number
+          - name: meancateg
+            title: Mean in category
+            type: number
+          - name: overallmean
+            title: Overall mean
+            type: number
+          - name: sdcateg
+            title: sd in category
+            type: number
+          - name: overallsd
+            title: Overall sd
+            type: number
+          - name: qtpv
+            title: p-value
+            type: number
+            format: zto,pvalue
+      - name: qtcor
+        title: Link with the Quantitative Variables
+        type: Table
+        columns:
+          - name: varcor
+            title: ''
+            type: text
+          - name: cor
+            title: Correlation
+            type: number
+          - name: corpvalue
+            title: p.value
+            type: number
+            format: zto,pvalue
