--- a/jamovi/pca.a.yaml
+++ b/jamovi/pca.a.yaml
@@ -53,7 +53,7 @@ options:
     default: 5
 
   - name: norme
-    title: Standardization
+    title: Scale to unit variance
     type: Bool
     default: true
 
@@ -88,7 +88,7 @@ options:
     default: false
 
   - name: proba
-    title: Significant threshold
+    title: Significance threshold
     type: Number
     default: 0.05
 
