--- a/jamovi/mca.a.yaml
+++ b/jamovi/mca.a.yaml
@@ -14,7 +14,7 @@ options:
     type: Data
 
   - name: actvars
-    title: Active Variables
+    title: Active Variables (>1)
     type: Variables
     suggested:
       - nominal
@@ -73,9 +73,9 @@ options:
     default: true
 
   - name: proba
-    title: Significance threshold
+    title: Significance threshold (%)
     type: Number
-    default: 0.05
+    default: 5
 
   - name: indcoord
     title: Coordinates
@@ -113,9 +113,9 @@ options:
     default: false
 
   - name: ventil
-    title: Ventilation level
+    title: Ventilation level (%)
     type: Number
-    default: 0.05
+    default: 5
 
   - name: modality
     title: Selection of catagories
